--- a/.travis.yml
+++ b/.travis.yml
@@ -3,5 +3,5 @@ python:
   - "2.6"
   - "2.7"
 install:
-  - "pip install requirements.txt"
+  - "pip install -r requirements.txt"
 script: nosetests
